Bug 170257 - Dragging a shape over another shape changes positions
Summary: Dragging a shape over another shape changes positions
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0 target:26.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Shapes
  Show dependency treegraph
 
Reported: 2026-01-07 14:44 UTC by Gabor Kelemen (Collabora)
Modified: 2026-01-13 18:20 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
The example file before changing it (71.72 KB, image/png)
2026-01-07 14:44 UTC, Gabor Kelemen (Collabora)
Details
The shape position after overriding the yellow heart with the red diamond (67.32 KB, image/png)
2026-01-07 14:45 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2026-01-07 14:44:48 UTC
Created attachment 204960 [details]
The example file before changing it

This is a followup to bug 170027, noticed while testing its fix.

When a shape is dropped over another shape to overwrite the target, the positioning does not stay the same, but moves to the right and bottom.

1. Open attachment 204695 [details] from bug 170027
2. Click on the red diamond shape long until the pointer changes
3. Press Alt, then drop the red shape over the yellow heart shape
-> The yellow heart disappears and it is replaced by the red shape (expected), and it jumps to the right and bottom
(Position X: 17,50 cm and Position Y: 5 cm changes to Position X: 18,85 cm, Position Y: 10,45 cm)

Seems to have started with:

https://git.libreoffice.org/core/+/11fd1adad3b23b57cfc6ffde88672154b02b15b6%5E%21/#F0

author	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Sep 23 14:33:41 2025 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Sep 23 17:59:49 2025 +0200
tree 2720d4a15e853b1e85ba1647ecc590fbe5e9b216
parent 37867ba3a4e44bcd4ff84153a6fb5aa8ebb2d22a [diff]

tdf#154913 empty is a valid value for m_aOutRect
Comment 1 Gabor Kelemen (Collabora) 2026-01-07 14:45:56 UTC
Created attachment 204961 [details]
The shape position after overriding the yellow heart with the red diamond
Comment 2 Gabor Kelemen (Collabora) 2026-01-07 14:46:53 UTC
Adding CC to: Noel Grandin

hopefully this is the biggest fallout from that improvement :)
Comment 3 Commit Notification 2026-01-10 13:22:52 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/64dfe34cdc0f7db90804bceb25f1e19e534d4d1b

tdf#170257 Dragging a shape over another shape changes positions 

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2026-01-13 18:20:47 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/19edb92d80b740866250a6ff60e252046e6ba219

tdf#170257 Dragging a shape over another shape changes positions 

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.