tdf#170257 Dragging a shape over another shape changes positions

Revert the following commit which seems to have caused this problem
  commit 11fd1adad3b23b57cfc6ffde88672154b02b15b6.
  tdf#154913 empty is a valid value for m_aOutRect

Change-Id: I3e4ef9b27021f76e3e474d00ec59cc8e1784dfff
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196781
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 64dfe34cdc0f7db90804bceb25f1e19e534d4d1b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196965
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>